# aiward

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
docs/: env-files.md  features-and-commands.md  implementation-map.md  improvements.md  infographics.md  local-install-and-usage.md
scripts/: coverage.sh  install.sh
src/: agents.rs  approval_receipts.rs  broker.rs  cloud.rs  context.rs  dashboard.html  env_file.rs  fs_util.rs  key_store.rs  lib.rs  main.rs  notifications.rs  project_store.rs  project_teardown.rs  teams.rs  workspace.rs  workspace_target.rs  worktrees.rs
src/anomaly/: mod.rs
src/approvals/: mod.rs  tui.rs
src/cli/: mod.rs
src/config/: mod.rs
src/dashboard/: mod.rs
src/detection/: mod.rs
src/git_context/: mod.rs
src/grants/: mod.rs
src/human/: display.rs  mod.rs
src/logs/: mod.rs
src/modes/: mod.rs
src/pending_requests/: mod.rs
src/policy/: mod.rs
src/recovery/: mod.rs
src/registry/: mod.rs
src/runner/: mod.rs
src/term/: mod.rs
src/unlock/: mod.rs
src/vault/: mod.rs
src/webui/: mod.rs
tests/: cli.rs
