[package]
name = "aiward"
version = "0.3.0"
edition = "2021"
description = "Local-first AI secret firewall for development environments."
license-file = "LICENSE"
repository = "https://github.com/aiWardsh/aiward"
homepage = "https://github.com/aiWardsh/aiward"
keywords = ["secrets", "security", "ai", "agents", "environment"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
  "docs/",
  "scripts/",
  ".github/",
  ".env.example",
  "tests/",
  "AGENTS.md",
  "install.sh",
]

[[bin]]
name = "ward"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
glob = "0.3"
libc = "0.2"
dotenvy = "0.15"
ed25519-dalek = "2.1"
hex = "0.4"
inquire = "0.7"
keyring = { version = "3.6", features = ["apple-native"] }
rand = "0.8"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
uuid = { version = "1.8", features = ["serde", "v4"] }
zeroize = "1.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)"] }
