[package]
name = "aiward"
version = "0.5.19"
edition = "2021"
rust-version = "1.86"
description = "Local-first AI secret firewall for development environments."
license = "MIT OR Apache-2.0"
repository = "https://github.com/aiWardsh/aiward"
homepage = "https://github.com/aiWardsh/aiward"
keywords = ["secrets", "security", "ai", "agents", "environment"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
  "docs/",
  "scripts/",
  ".github/",
  ".env.example",
  "tests/",
  "AGENTS.md",
  "install.sh",
]

[[bin]]
name = "ward"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
dirs = "5.0"
glob = "0.3"
libc = "0.2"
dotenvy = "0.15"
ed25519-dalek = "2.1"
hex = "0.4"
inquire = "0.7"
keyring = { version = "3.6", features = ["apple-native"] }
rand = "0.8"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
uuid = { version = "1.8", features = ["serde", "v4"] }
zeroize = "1.8"
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_28", "underline-color"] }
crossterm = { version = "0.28", features = ["event-stream"] }
indicatif = "0.17"
tiny_http = "0.12"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)"] }
